# devix

./: .devixignore  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yml  index.html  pyproject.toml  requirements.txt  setup.py  test_devix_integration.py
archive/: auto_dev_watcher.py  enhanced_prompter.py  monitor.py  monitor_script.py  prompter.py  supervisor.py  windsurf_controller.py
scripts/: docker.sh  init-project.sh  status.sh  watch.sh
src/devix/: __init__.py  __main__.py
src/devix/analysis/: __init__.py  base_analyzer.py  performance_analyzer.py  project_scanner.py  quality_analyzer.py  security_analyzer.py  test_analyzer.py
src/devix/cli/: __init__.py  main.py
src/devix/config/: __init__.py  config_manager.py  settings.py
src/devix/core/: __init__.py  orchestrator.py
src/devix/reporting/: __init__.py  base_formatter.py  enhanced_generator.py  markdown_formatter.py  text_formatter.py
tests/: test_placeholder.py
todo/: README.md  autodev-config.txt  autodev-makefile.txt  autodev-quickstart.sh  autodev-setup-files.py  autodev-supervisor.py  autodev-tests.py  autodev-workflows.md  jetbrains-plugin.txt  jetbrains-setup-guide.md  jetbrains-tests.py  jetbrains-troubleshooting.md
